--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,4 +1,4 @@
-#Howto use the module.
+#summary Howto use the module.
 
 = Introduction =
 
@@ -25,4 +25,3 @@ The available options are:
   _-n NCPU, --ncpu=NCPU_  ncpu, use how many cpus for current job.
 
   _-v_                    verbosity, dupulicate v to get more details.
-
